tests/baselines/reference/moduleCrashBug1.errors.txt
moduleCrashBug1.ts(18,9): error TS4022: Type reference cannot refer to container '_modes'.
